docs/reference/v1.4/overview.rst
Overview
########

The heart of the LimePSB RPCM carrier board is Raspberry PI Compute Module 4 (CM4) or Compute Module 5 (CM5). The module is connect to a one lane mPCIe connector with a FPGA controlled RF front end. The block diagram for LimePSB RPCM board is as shown in Figure 3.e 

.. figure:: /images/LimePSB-RPCM_v1.4_diagrams_r3_block.png
  :width: 600

  Figure 3: LimePSB RPCM v1.4 board block diagram

LimePSB RPCM board picture with highlighted connectors and main components are presented in Figure 4 and Figure 5. 

.. figure:: /images/LimePSB-RPCM_v1.4_top_components.png
  :width: 600

  Figure 4: LimePSB RPCM v1.4 board top connectors and main components

.. figure:: /images/LimePSB-RPCM_v1.4_bot_components.png
  :width: 600

  Figure 5: LimePSB RPCM v1.4 board bottom connectors and main components

Description of board components is given in the Table 1.

.. table:: Table 1. Board components

  +---------------------------------------------------------------------------------------------------------------------------------+
  | **Miscellaneous   devices**                                                                                                     |
  +==============================+=======================+==========================================================================+
  | **Board Reference**          | **Type**              | **Description**                                                          |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC18                         | FPGA                  | Lattice iCE40 Ultra family (iCE5LP4K)                                    |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC19                         | IC                    | FPGA configuration flash (16 MBIT)                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC7                          | IC                    | I²C temperature sensor LM75                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC8/IC9                      | IC                    | I²C EEPROM Memory 128Kb (16K x 8), connected   to RF transceiver I2C bus |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC10/IC11                    | IC                    | I²C secure key storage                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC14/IC16                    | IC                    | I²C Real time clock                                                      |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC6                          | IC                    | 8 channel 12 bit ADC                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC12, IC15                   | IC                    | I²C I/O expander                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC20                         | IC                    | USB2.0 HUB                                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC21, IC26, IC27, IC29, IC30 | IC                    | USB switch                                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J27, J26                     | Pin header            | 2-pin and 4-pin FAN connector (5V default or   3.3V or VCC_INT voltage)  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | **Configuration,   Status, Setup Elements and GPIOs**                                                                           |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED1, LED2, LED3, LED4       | Red-green status LEDs | User defined indication LED                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED5                         | Red-green status LEDs | Raspberry CM4/5 status                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED6                         | Green status LED      | Power indication LED                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | LED7                         | Red-green status LEDs | FPGA status                                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | BZ1                          | Buzzer                | User defined                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J12                          | Header                | 14-pin Raspberry CM4 SYS header                                          |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J5                           | Header                | Power control and PG status                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J6                           | Header                | Wireless LAN and Bluetooth control                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J10                          | Header                | 20-pin CM4 GPIO header                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J28                          | Header                | FPGA configuration                                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | DSW1                         | DIP switch            | Boot and USB configuration                                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | **RF   front end**                                                                                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC52, IC54                   | IC                    | PA TQP3M9018                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC58, IC59                   | IC                    | LNA SPF5043Z                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC50, IC51, IC56, IC57       | IC                    | RF switch F2972NEGK                                                      |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC53, IC55                   | IC                    | Coupler HHM22152A2                                                       | 
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC72, IC73                   | IC                    | RF power detector LTC5587                                                |         
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | **Communication   Ports**                                                                                                       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J1, J2                       | Connector             | Raspberry Pi CM4(L)/5 connectors                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J11                          | Header                | Raspberry CM4/5 UART0 header (unpopulated)                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J8                           | Header                | 5-pin front screen connector (power, I2C, button)                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J29                          | USB                   | USB 2.0 (Type-C) socket                                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J33                          | USB                   | Dual USB 3.0 (Type-A) socket                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J9                           | Connector             | Gigabit RJ45 (Ethernet with magnetics) port                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J34, J35                     | Connector             | HDMI 2.0 socket                                                          |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J15, J16                     | Connector             | FPC 15-pin for display and camera                                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J14, J17                     | Connector             | 3.5 mm jack, Header (unpopulated)                                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J7                           | SDIO                  | Micro SD card holder                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J4                           | Nano-SIM              | Nano-SIM card holder                                                     |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J3                           | Connector             | Mini PCIe x1 expansion slot                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | **Clock   Circuitry**                                                                                                           |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO1                          | VCOCXO                | 30.72 MHz VCOCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO6                          | VCOCXO                | 10 MHz VCOCXO                                                            |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO2, XO7                     | VCTCXO                | 30.72 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO3, XO8                     | VCTCXO                | 30.72 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO4, XO9                     | VCTCXO                | 40.00 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | XO5, XO10                    | VCTCXO                | 38.40 MHz VCTCXO                                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC48                         | IC                    | GNSS receiver                                                            |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC36 (IC38)                  | IC                    | 16 (8) bit DAC for XOs VC tuning                                         |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC47                         | IC                    | RPi sync mux                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC31, IC39                   | IC                    | Clock buffer                                                             |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC37                         | IC                    | Phase detector                                                           |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J36                          | SMA connector         | Reference clock input EXT_SYNC_IN                                        |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J38                          | SMA connector         | Reference clock output EXT_SYNC_OUT                                      |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J37, J39                     | U.FL connector        | Reference clock output                                                   |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J20/J22, J23/25, J21, J24    | Multiple              | Internal U.FL connectors J20/J22, J23/J25 to external SMA J21, J24       |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | J41                          | U.FL connector        | External GNSS antenna                                                    |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC33, IC32, IC35, IC40,      | IC                    | Clock signal analog mux                                                  |
  | IC41, IC42, IC43, IC45       |                       |                                                                          |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | **Power   Supply**                                                                                                              |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC64                         | IC                    | Switching regulator ADP2386 (3.3V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC65                         | IC                    | Switching regulator ADP2386 (5.0V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC66, IC71                   | IC                    | Linear regulator AP7361-FGE (3.3V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC68                         | IC                    | Linear regulator AP7361-FGE (2.5V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC70                         | IC                    | Linear regulator AP7361-FGE (1.5V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC67                         | IC                    | Linear regulator AP7361-FGE (1.2V rail)                                  |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC69                         | IC                    | Voltage reference AS431ANTR-G1 (2.5V rail)                               |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC76                         | IC                    | USB power delivery controller CYPD3177-24LQXQT                           |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+
  | IC74                         | IC                    | Power over Ethernet controller AG5712-LPB                                |
  +------------------------------+-----------------------+--------------------------------------------------------------------------+

A more detailed description is provided in the following sections.

